<resources>
    <string name="app_name">Home Automation</string>
    <string name="disabledAlarmMessage">Security Offline</string>
    <string name="alarmMotionDetectionMessage">Motion Detected</string>
    <string name="alarmNoMotionDetectionMessage">No Motion Detected</string>
    <string name="alarmNoServiceMessage">"Loading…     "</string>
    <string name="alarmEnabledMessage">Enabled</string>
    <string name="alarmDisabledMessage">Disabled</string>
    <string name="appTitle">Home Automation</string>
    <string name="airConditionTitle">Air Condition Settings</string>
    <string name="alarmTitle">Alarm Settings</string>
    <string name="blindsTitle">Blinds Settings</string>
    <string name="boilerTitle">Boiler Settings</string>
    <string name="alarmButtonText">Alarm</string>
    <string name="lightTitle">Light Settings</string>
    <string name="lightsButtonText">Lights</string>
    <string name="airConditionSwitchText">Air Condition:</string>
    <string name="passwordText">Password:</string>
    <string name="roomBlindsSwitchText">Room Blinds:</string>
    <string name="boilerSwitchText">Boiler:</string>
    <string name="roomLight1SwitchText">Room Light 1:</string>
    <string name="enableText">Turn on at:</string>
    <string name="roomLight2SwitchText">Room Light 2:</string>
    <string name="boilerButtonText">Boiler</string>
    <string name="timeScheduleText">Time Schedule</string>
    <string name="alarmSwitchText">Alarm:</string>
    <string name="airConditionButtonText">Air Condition</string>
    <string name="blindsButtonText">Blinds</string>
    <string name="disableText">Turn off at:</string>
    <string name="alarmStatusText">Alarm Status:</string>
    <string name="enable2Text">Enable at:</string>
    <string name="temperatureText">Temperature:</string>
    <string name="disable2Text">Disable at:</string>
    <string name="sensorScheduleText">Sensor Schedule</string>
    <string name="lightLevelText">Light Level:</string>
    <string name="homeStatusText">Home Status:</string>
    <string name="hotWaterText">Hot Water:</string>
    <string name="disableAlarmSirenText">Turn off Alarm Siren</string>
</resources>
