<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activityPackage.HomeScreen"
    android:background="#aeb7cc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appTitle"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@color/colorPrimaryDark"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"

        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmButtonText"
            android:id="@+id/hsAlarmButton"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:layout_marginBottom="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lightsButtonText"
            android:id="@+id/hsLightsButton"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="5dp"
            android:textSize="22sp"
            android:layout_marginBottom="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boilerButtonText"
            android:id="@+id/hsBoilerButton"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="5dp"
            android:textSize="22sp"
            android:layout_marginBottom="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airConditionButtonText"
            android:id="@+id/hsAirConditionButton"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="5dp"
            android:textSize="22sp"
            android:layout_marginBottom="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blindsButtonText"
            android:id="@+id/hsBlindsButton"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:textAllCaps="false"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="5dp"
            android:textSize="22sp"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/alarmStatusText"
            android:layout_marginBottom="5dp"
            android:layout_row="0"
            android:layout_column="0"
            android:textStyle="bold"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/hsAlarmStatusText"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/hsHomeStatusText"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lightLevelText"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/homeStatusText"
            android:layout_row="1"
            android:layout_column="0"
            android:textStyle="bold"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/hsLightLevelText"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/hotWaterText"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/hsHotWaterText"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/temperatureText"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/hsTemperatureText"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_marginTop="0dp" />

    </GridLayout>

</GridLayout>

