<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activityPackage.AlarmScreen"
    android:background="#aeb7cc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appTitle"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@color/colorPrimaryDark"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/alarmTitle"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/panelshape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/passwordText"
                android:id="@+id/asPasswordLabel"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:textColor="#434e79" />

            <EditText
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:imeOptions="actionDone"
                android:ems="10"
                android:id="@+id/asPasswordField"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="end" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alarmSwitchText"
                android:id="@+id/asAlarmLabel"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textColor="#757578" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/asAlarmSwitch"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false" />

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/timeScheduleText"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:background="@drawable/panelshape">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable2Text"
                android:id="@+id/asEnableTimeBox"
                android:layout_row="0"
                android:layout_column="0"
                android:textColor="#757578"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false"/>

            <EditText
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:imeOptions="actionDone"
                android:ems="10"
                android:id="@+id/asEnableTimeField"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="end"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable2Text"
                android:id="@+id/asDisableTimeBox"
                android:layout_row="1"
                android:layout_column="0"
                android:textColor="#757578"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false"/>

            <EditText
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:imeOptions="actionDone"
                android:ems="10"
                android:id="@+id/asDisableTimeField"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="end"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="5dp" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/homeStatusText"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/asHomeStatusText"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:textStyle="bold" />
        </GridLayout>

    </GridLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/disableAlarmSirenText"
        android:id="@+id/asAlarmOffButton"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="15dp" />

</GridLayout>
