<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#aeb7cc"
    tools:context=".activityPackage.AirConditionScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appTitle"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@color/colorPrimaryDark"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/airConditionTitle"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/panelshape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/airConditionSwitchText"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="#434e79" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enableText"
                android:id="@+id/acsTurnOnTemperatureBox"
                android:layout_row="1"
                android:layout_column="0"
                android:textColor="#757578"
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acsAirConditionSwitch"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_orange_dark" />

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:ems="10"
                android:id="@+id/acsTurnOnTemperatureField"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center_horizontal|end"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="0dp"
                android:text="" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disableText"
                android:id="@+id/acsTurnOffTemperatureBox"
                android:layout_row="2"
                android:layout_column="0"
                android:textColor="#757578"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:ems="10"
                android:id="@+id/acsTurnOffTemperatureField"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="center_horizontal|end"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="0dp"
                android:text="" />

        </GridLayout>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/temperatureText"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/acsTemperatureText"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="15dp"
            android:layout_gravity="end"
            android:textStyle="bold" />
    </GridLayout>


</GridLayout>
